--- a/styles/header.css
+++ b/styles/header.css
@@ -19,7 +19,7 @@
 
 header {
     font-family: 'Open Sans', 'Arial', sans-serif;
-    background-color: #ebebeb;
+    background-color: #fff;
     padding: 21px 0px 21px 0px;
     text-align: center;
 }
