--- a/styles/mainpage.css
+++ b/styles/mainpage.css
@@ -1,5 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
+/* .background-image {
+    background: url("../images/background/background.jpg") center;
+    position: absolute;
+    background-size: 100% 100%;
+      left: 0px;
+      top: 0px;
+      z-index: -1;
+      width: 100%;
+      height: 349%;
+      -webkit-filter: blur(5px);
+      filter: opacity(0.2);
+} */
+
+body {
+    /* background-image: url('../images/background/background.jpg'); */
+    background-image: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url('../images/background/background.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    /* background-color: rgba(255, 0, 0, 0.1); */
+
+    background-position: center;
+    height: 100vh;
+}
+
 @media only screen and (max-width: 576px) { 
     .container-certificate-title p {
         font-size: 0.85rem;
@@ -248,7 +272,8 @@
 
 .container-list:last-child p {
     font-size: calc(1rem + 0.15vw);
-    padding-top: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 10rem;
 }
 
 .container {
@@ -263,9 +288,9 @@
 }
 
 .container-certificate {
-    background-color: #ebebeb;
-
-    margin: 5rem 0;
+    background-color: #fff;
+    border-top: rgb(214, 214, 214) solid 0.1rem;
+    margin: 5rem 3rem;
 }
 
 .container-notarial-acts {
